[package]
name = "rpc-aggregator"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-telemetry = ["my-telemetry"]


[dependencies]
tokio = { version = "*", features = ["full"] }
async-trait = "*"
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }
my-telemetry = { tag = "1.1.1", git = "https://github.com/MyJetTools/my-telemetry.git", optional = true }
